--- a/css/mescss/typography.css
+++ b/css/mescss/typography.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">');
 
+
+
 body {
     font-family: Roboto,sans-serif;
     font-size: 16px;
     line-height: 1.6em;
-    margin : 0 20px;
+    margin : 0px;
+}
+
+body p{
+    margin: 0 20px;
 }
 
 a{
