--- a/css/mescss/menu.css
+++ b/css/mescss/menu.css
@@ -3,7 +3,7 @@
     width: 30px;
     height: 30px;
     position: absolute;
-    top : 30px;
+    top : 59px;
     right: 30px;
     display: flex;
     align-items: center;
@@ -15,7 +15,7 @@
 .nav-toggle-bar::before,
 .nav-toggle-bar::after{
     content: "";
-    background-color: black;
+    background-color: white;
     width: 100%;
     height: 2px;
     position: absolute;
