--- a/css/mescss/layout.css
+++ b/css/mescss/layout.css
@@ -61,5 +61,23 @@ footer{
 
 .Nom{
     margin-left: -8em;
+    padding: .7em;
+    margin-bottom: -7em;
+
+}
+
+footer{
+    column-count: 3;
+}
+
+.ProjetRéalisé{
+    font-size: 9px;
+    line-height: 1.3;
+    margin-top: 5em;
+}
+
+.Icones{
+    column-count: 2;
+    margin-right: 2em;
 }
 
