--- a/css/mescss/carousel.css
+++ b/css/mescss/carousel.css
@@ -1,10 +1,23 @@
 img{
     max-width: 100%;
-    height: auto;
+    height: auto;s
+}
+
+body>h1{
+    margin-top: 1em;
+    margin-left: .5em;
 }
 
 .carousel h2,{
     margin: 0 20px;
+}
+
+h2{
+    margin-left: 1em;
+    border-bottom: white solid 2px;
+    padding-bottom: 6px;
+    padding-left: 13px;
+    padding-right: 3px;
 }
 
 .carousel{
